--- a/backend-service/src/main/resources/application.yml
+++ b/backend-service/src/main/resources/application.yml
@@ -5,9 +5,10 @@ spring:
   application:
     name: BACKEND-SERVICE
   datasource:
-    url: jdbc:postgresql://localhost:5432/devopsl-db
+    # url: jdbc:postgresql://localhost:5432/devopsl-db            # <-- local
+    url: jdbc:postgresql://postgresql:5432/devopsl-db     # <-- docker
     username: postgres
-    password:
+    password: postgres
   jpa:
     hibernate:
       ddl-auto: update
