--- a/front-service/package.json
+++ b/front-service/package.json
@@ -4,14 +4,21 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
-    "test": "test",
-    "build": "npm install"
+    "build": "webpack",
+    "test": "test"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "ejs": "^3.1.10",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "jest": "^29.7.0",
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "babel-loader": "^10.0.0",
+    "ejs-loader": "^0.5.0",
+    "webpack": "^5.99.3",
+    "webpack-cli": "^6.0.1"
   }
 }
