--- a/front-service/package.json
+++ b/front-service/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "build": "webpack",
-    "test": "test"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
