--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - name: Change directory to front-service
+      run: cd front-service
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
