--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,8 +26,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - name: Change directory to front-service
-      run: cd front-service
     - run: npm ci
+      working-directory: front-service
     - run: npm run build --if-present
+      working-directory: front-service
     - run: npm test
+      working-directory: front-service
