--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - name: List files in front-service (for debugging)
+      run: ls -la front-service
     - run: npm ci
       working-directory: front-service
     - run: npm run build --if-present
