--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,8 +3,12 @@ name: Node.js CI
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - 'front-service/**'
   pull_request:
     branches: [ "main" ]
+    paths:
+      - 'front-service/**'
 
 jobs:
   build:
