--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
           java-version: 17
 
       - name: Build with Maven
-        run: mvn clean install -DskipTests
+        run: mvn clean install ../backend-service/pom.xml -DskipTests
 
       - name: Run tests
         run: mvn test
