--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install ../backend-service/pom.xml -DskipTests
+        working-directory: backend-service
 
       - name: Run tests
         run: mvn test
+        working-directory: backend-service
