--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,6 +5,7 @@ on:
     branches: [ "main" ]
     paths:
       - 'front-service/**'
+      - '.github/workflows/node.js.yml'
   pull_request:
     branches: [ "main" ]
     paths:
