--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,15 @@ services:
       - "1000:1000"
     depends_on:
       - postgres
-  
+
+  front-service:
+    build:
+      context: front-service
+      dockerfile: Dockerfile
+    ports:
+      - "1001:1001"
+    command: ["node", "app.js"]
+
   postgres:
     container_name: postgresql
     image: postgres:17.2
