--- a/.github/workflows/backend-service.yml
+++ b/.github/workflows/backend-service.yml
@@ -2,9 +2,14 @@ name: Java CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
+    paths:
+      - 'backend-service/**'
+      - '.github/workflows/backend-service.yml'
   pull_request:
-    branches: [ main ]
+    branches: [ "main" ]
+    paths:
+      - 'backend-service/**'
 
 jobs:
   build:
