Service use images from Docker Hub
Signed-off-by: Vladislav <vladislav.tezev@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,24 +2,26 @@ version: "3.9"
 
 services:
   backend-service:
-    build:
-      context: backend-service
-      dockerfile: Dockerfile
+    # build:
+    #   context: backend-service
+    #   dockerfile: Dockerfile
+    image: marmevladek/devopsl-backend:latest
     ports:
       - "1000:1000"
     depends_on:
       - postgres
 
   front-service:
-    build:
-      context: front-service
-      dockerfile: Dockerfile
+    # build:
+    #   context: front-service
+    #   dockerfile: Dockerfile
+    image: marmevladek/devopsl-frontend:latest
     ports:
       - "1001:1001"
     command: ["node", "app.js"]
 
   postgres:
-    container_name: postgresql
+    container_name: postgresql_devops
     image: postgres:17.2
     volumes:
       - postgres:/var/lib/postgresql/data
