--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,8 @@ services:
     container_name: postgresql
     image: postgres:17.2
     volumes:
-      - postgres:/var/lib/postgresql/data
+    - postgres:/var/lib/postgresql/data
+    - ./db-init/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5433:5432"
     environment:
