--- a/.github/workflows/front-service.yml
+++ b/.github/workflows/front-service.yml
@@ -74,4 +74,5 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: |
+  ## fefwefw
             marmevladek/devopsl-frontend:latest
