--- a/.github/workflows/front-service.yml
+++ b/.github/workflows/front-service.yml
@@ -13,8 +13,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-
+    runs-on: self-hosted
     strategy:
       matrix:
         node-version: [18.x, 20.x, 22.x]
