--- a/.github/workflows/front-service.yml
+++ b/.github/workflows/front-service.yml
@@ -73,6 +73,7 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: |
+            marmevladek/devopsl-frontend:latest
 
   deploy:
     needs: docker
