--- a/backend-service/src/main/resources/application.yml
+++ b/backend-service/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: BACKEND-SERVICE
   datasource:
 #     url: jdbc:postgresql://localhost:5432/devopsl-db            # <-- local
-     url: jdbc:postgresql://postgres:5432/devopsl-db     # <-- docker
+     url: jdbc:postgresql://localhost:5432/devopsl-db     # <-- docker
      username: postgres
      password: postgres
   jpa:
