Add resources for rabbitmq
Signed-off-by: Vladislav <vladislav.tezev@gmail.com>

--- a/backend-service/src/main/resources/application.yml
+++ b/backend-service/src/main/resources/application.yml
@@ -12,6 +12,11 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+  rabbitmq:
+    host: rabbitmq
+    port: 5672
+    username: admin
+    password: admin
 
 management:
   endpoints:
