--- a/.github/workflows/backend-service.yml
+++ b/.github/workflows/backend-service.yml
@@ -12,7 +12,7 @@ on:
       - 'backend-service/**'
 
 jobs:
-  build:
+  build-backend:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -24,13 +24,13 @@ jobs:
           distribution: 'temurin'
           java-version: 17
 
-      - name: Build with Maven
+      - name: Build backend-service
         run: mvn clean install -DskipTests
         working-directory: backend-service
 
-  test:
+  test-backend:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-backend
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -41,13 +41,13 @@ jobs:
           distribution: 'temurin'
           java-version: 17
 
-      - name: Run tests
+      - name: Test backend-service
         run: mvn test
         working-directory: backend-service
 
-  docker:
-    needs: test
+  docker-backend:
     runs-on: ubuntu-latest
+    needs: test-backend
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -61,7 +61,7 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-      - name: Build and push Docker image
+      - name: Build and push backend Docker image
         uses: docker/build-push-action@v5
         with:
           context: ./backend-service
@@ -70,3 +70,62 @@ jobs:
           platforms: linux/amd64,linux/arm64
           tags: |
             marmevladek/devopsl-backend:latest
+
+  build-notification:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: 17
+
+      - name: Build notification-service
+        run: mvn clean install -DskipTests
+        working-directory: notification-service
+
+  test-notification:
+    runs-on: ubuntu-latest
+    needs: build-notification
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: 17
+
+      - name: Test notification-service
+        run: mvn test
+        working-directory: notification-service
+
+  docker-notification:
+    runs-on: ubuntu-latest
+    needs: test-notification
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+      - name: Build and push notification Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./notification-service
+          file: ./notification-service/Dockerfile
+          push: true
+          platforms: linux/amd64,linux/arm64
+          tags: |
+            marmevladek/devopsl-notification:latest
