--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ version: "3.9"
 
 services:
   backend-service:
-#    build:
-#      context: backend-service
-#      dockerfile: Dockerfile
+    build:
+      context: backend-service
+      dockerfile: Dockerfile
     image: marmevladek/devopsl-backend:latest
     platform: linux/amd64
     ports:
@@ -14,10 +14,26 @@ services:
     networks:
       - monitoring
 
+  notification-service:
+    build:
+      context: notification-service
+      dockerfile: Dockerfile
+    image: marmevladek/devopsl-notification:latest
+    platform: linux/amd64
+    ports:
+      - "1010:1010"
+    environment:
+      - SPRING_RABBITMQ_HOST=rabbitmq
+    depends_on:
+      - rabbitmq
+    networks:
+      - monitoring
+
+
   front-service:
-#    build:
-#      context: front-service
-#      dockerfile: Dockerfile
+    build:
+      context: front-service
+      dockerfile: Dockerfile
     image: marmevladek/devopsl-frontend:latest
     platform: linux/amd64
     ports:
@@ -26,12 +42,23 @@ services:
     networks:
       - monitoring
 
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: admin
+      RABBITMQ_DEFAULT_PASS: admin
+    networks:
+      - monitoring
+
   postgres:
     container_name: postgresql
     image: postgres:17.2
     volumes:
     - postgres:/var/lib/postgresql/data
-#    - ./db-init/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5433:5432"
     environment:
