--- a/.github/workflows/backend-service.yml
+++ b/.github/workflows/backend-service.yml
@@ -15,6 +15,9 @@ jobs:
   build-backend:
     runs-on: ubuntu-latest
     steps:
+      - name: Formatter code
+        run: mvn net.revelc.code.formatter:formatter-maven-plugin:2.24.1:format
+
       - name: Checkout code
         uses: actions/checkout@v3
 
@@ -74,6 +77,9 @@ jobs:
   build-notification:
     runs-on: ubuntu-latest
     steps:
+      - name: Formatter code
+        run: mvn net.revelc.code.formatter:formatter-maven-plugin:2.24.1:format
+
       - name: Checkout code
         uses: actions/checkout@v3
 
