--- a/.github/workflows/front-service.yml
+++ b/.github/workflows/front-service.yml
@@ -87,17 +87,17 @@ jobs:
           kubectl cluster-info
           kubectl get nodes
 
-      - name: Deploy to Minikube
-        run: |
-          kubectl apply -f kubernetes/
+      # - name: Deploy to Minikube
+      #   run: |
+      #     kubectl apply -f kubernetes/
           
-          kubectl rollout restart deployment/front-service
+      #     kubectl rollout restart deployment/front-service
           
-          kubectl rollout status deployment/front-service
+      #     kubectl rollout status deployment/front-service
           
-          kubectl get pods -o wide
-          kubectl get svc
+      #     kubectl get pods -o wide
+      #     kubectl get svc
 
-      - name: Get Minikube service URL
-        run: |
-          minikube service front-service --url
+      # - name: Get Minikube service URL
+      #   run: |
+      #     minikube service front-service --url
