--- a/.github/workflows/front-service.yml
+++ b/.github/workflows/front-service.yml
@@ -79,25 +79,7 @@ jobs:
     needs: docker
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Verify kubectl access
+      - name: Mark CI success
+        if: success()
         run: |
-          kubectl cluster-info
-          kubectl get nodes
-
-      # - name: Deploy to Minikube
-      #   run: |
-      #     kubectl apply -f kubernetes/
-          
-      #     kubectl rollout restart deployment/front-service
-          
-      #     kubectl rollout status deployment/front-service
-          
-      #     kubectl get pods -o wide
-      #     kubectl get svc
-
-      # - name: Get Minikube service URL
-      #   run: |
-      #     minikube service front-service --url
+          echo "CI_SUCCESS_COMMIT_SHA=$(git rev-parse HEAD)" >> $GITHUB_ENV
