--- a/.github/workflows/front-service.yml
+++ b/.github/workflows/front-service.yml
@@ -78,7 +78,7 @@ jobs:
   deploy:
     needs: test
     runs-on: ubuntu-latest
-    #dctaф
+    #dctaф123
     steps:
       - name: Mark CI success
         if: success()
