--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -115,6 +115,32 @@ services:
     networks:
       - monitoring
 
+  sonar-db:
+    image: postgres:17.2
+    restart: unless-stopped
+    environment:
+      POSTGRES_USER: sonar
+      POSTGRES_PASSWORD: sonar
+      POSTGRES_DB: sonarqube
+    volumes:
+      - sonar-db:/var/lib/postgresql/data
+    networks:
+      - monitoring
+
+  sonarqube:
+    image: sonarqube:10.5-community
+    restart: unless-stopped
+    depends_on:
+      - sonar-db
+    ports:
+      - "9000:9000"
+    environment:
+      SONAR_JDBC_URL: jdbc:postgresql://sonar-db:5432/sonarqube
+      SONAR_JDBC_USERNAME: sonar
+      SONAR_JDBC_PASSWORD: sonar
+    networks:
+      - monitoring
+
 networks:
   monitoring:
     driver: bridge
@@ -122,4 +148,5 @@ networks:
 volumes:
   postgres:
   grafana-data:
+  sonar-db:
 
