--- a/.github/workflows/backend-service.yml
+++ b/.github/workflows/backend-service.yml
@@ -138,6 +138,38 @@ jobs:
         run: mvn test
         working-directory: notification-service
 
+  sonar-local:
+    name: SonarQube Local Scan
+    runs-on: ubuntu-latest
+    needs: [ test-backend, test-notification ]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 17
+
+      - name: Wait for SonarQube to be ready
+        run: |
+          for i in {1..20}; do
+            curl -s http://localhost:9000/api/system/health | grep -q '"status":"GREEN"' && break
+            echo "Waiting for SonarQube..."
+            sleep 15
+          done
+
+      - name: Analyze backend-service
+        working-directory: backend-service
+        run: mvn verify sonar:sonar
+
+      - name: Analyze notification-service
+        working-directory: notification-service
+        run: mvn verify sonar:sonar
+
   docker-notification:
     runs-on: ubuntu-latest
     needs: test-notification
