--- a/.github/workflows/notification-service.yml
+++ b/.github/workflows/notification-service.yml
@@ -62,7 +62,7 @@ jobs:
         working-directory: notification-service
 
   sonar:
-    name: SonarQube Local Scan
+    name: SonarQube Scan
     runs-on: ubuntu-latest
     needs: test
     steps:
