--- a/.github/workflows/product-service.yml
+++ b/.github/workflows/product-service.yml
@@ -63,7 +63,7 @@ jobs:
 
 
   sonar:
-    name: SonarQube Local Scan
+    name: SonarQube Scan
     runs-on: ubuntu-latest
     needs: test
     steps:
