--- a/.github/workflows/notification-service.yml
+++ b/.github/workflows/notification-service.yml
@@ -14,6 +14,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    name: Build
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -39,6 +40,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     needs: build
+    name: Test
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -93,8 +95,9 @@ jobs:
         working-directory: notification-service
         run: mvn verify sonar:sonar
 
-  docker-notification:
+  docker-image:
     runs-on: ubuntu-latest
+    name: Docker Image
     needs: sonar
     steps:
       - name: Checkout code
