--- a/.github/workflows/notification-service.yml
+++ b/.github/workflows/notification-service.yml
@@ -13,29 +13,34 @@ on:
 
 jobs:
   build:
+    name: Build and analyze
     runs-on: ubuntu-latest
-    name: Build
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
+      - uses: actions/checkout@v4
         with:
-          distribution: 'temurin'
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+        with:
           java-version: 17
-
-      - name: Format code
-        working-directory: notification-service
-        run: mvn net.revelc.code.formatter:formatter-maven-plugin:2.24.1:format
-
-      - name: Validate format
-        working-directory: notification-service
-        run: mvn formatter:validate
-
-      - name: Build notification-service
-        run: mvn clean install -DskipTests
-        working-directory: notification-service
+      - name: Cache SonarQube packages
+        uses: actions/cache@v1
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+      - name: Cache Maven packages
+        uses: actions/cache@v1
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      - name: Build and analyze
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=devopsl -Dsonar.projectName='devopsl'
 
   test:
     runs-on: ubuntu-latest
@@ -63,42 +68,10 @@ jobs:
         run: mvn test
         working-directory: notification-service
 
-  sonar:
-    name: SonarQube Scan
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 17
-
-      - name: Wait for SonarQube to be ready
-        run: |
-          for i in {1..20}; do
-            curl -s http://localhost:9000/api/system/health | grep -q '"status":"GREEN"' && break
-            echo "Waiting for SonarQube..."
-            sleep 15
-          done
-
-      - name: Analyze backend-service
-        working-directory: backend-service
-        run: mvn verify sonar:sonar
-
-      - name: Analyze notification-service
-        working-directory: notification-service
-        run: mvn verify sonar:sonar
-
   docker-image:
     runs-on: ubuntu-latest
     name: Docker Image
-    needs: sonar
+    needs: test
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
