Fix CI Pipelines
Signed-off-by: Vladislav <vladislav.tezev@gmail.com>

--- a/.github/workflows/product-service.yml
+++ b/.github/workflows/product-service.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          key: ${{ runner.os }}-m2-${{ hashFiles('backend-service/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
       - name: Build and analyze
         env:
