--- a/.github/workflows/product-service.yml
+++ b/.github/workflows/product-service.yml
@@ -13,43 +13,51 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
     name: Build and Analyze
+    runs-on: ubuntu-latest
     services:
       sonar:
         image: sonarqube:community
-        ports:
-          - 9000:9000
+        ports: [ 9000:9000 ]
         options: >-
-          --health-cmd="curl -f http://localhost:9000 || exit 1"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
+          -e SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true
+          --health-cmd="curl -f http://localhost:9000/api/system/status | grep -q -E 'UP|GREEN'"
+          --health-interval=5s --health-timeout=5s --health-retries=20
 
     steps:
       - uses: actions/checkout@v4
-      - name: Wait for SonarQube to be ready
+
+      - name: Wait for SonarQube
         run: |
-          until curl -s http://localhost:9000; do
-            echo "Waiting for SonarQube..."
-            sleep 10
+          echo "Waiting for SonarQube..."
+          until curl -s http://localhost:9000/api/system/status | grep -q -E 'UP|GREEN'; do
+            sleep 3
           done
+
+      - name: Generate CI token
+        id: gen_token
+        run: |
+          TOKEN=$(curl -s -u admin:admin \
+            -X POST "http://localhost:9000/api/user_tokens/generate" \
+            -d "name=ci-token" | jq -r '.token')
+          echo "::add-mask::$TOKEN"
+          echo "SONAR_TOKEN=$TOKEN" >> "$GITHUB_ENV"
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
-      - name: Run Sonar Scanner
+
+      - name: Build & Sonar analyze
         working-directory: backend-service
         env:
           SONAR_HOST_URL: http://localhost:9000
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:5.1.0.4751:sonar \
+          mvn -B verify \
+            org.sonarsource.scanner.maven:sonar-maven-plugin:5.1.0.4751:sonar \
             -Dsonar.projectKey=devopsl \
-            -Dsonar.projectName='devopsl' \
-            -Dsonar.host.url=http://localhost:9000 \
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+            -Dsonar.host.url=$SONAR_HOST_URL
   test:
     runs-on: ubuntu-latest
     name: Test
