--- a/.github/workflows/product-service.yml
+++ b/.github/workflows/product-service.yml
@@ -13,51 +13,22 @@ on:
 
 jobs:
   build:
-    name: Build and Analyze
+    name: Build
     runs-on: ubuntu-latest
-    services:
-      sonar:
-        image: sonarqube:community
-        ports: [ 9000:9000 ]
-        options: >-
-          -e SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true
-          --health-cmd="curl -f http://localhost:9000/api/system/status | grep -q -E 'UP|GREEN'"
-          --health-interval=5s --health-timeout=5s --health-retries=20
-
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Wait for SonarQube
-        run: |
-          echo "Waiting for SonarQube..."
-          until curl -s http://localhost:9000/api/system/status | grep -q -E 'UP|GREEN'; do
-            sleep 3
-          done
-
-      - name: Generate CI token
-        id: gen_token
-        run: |
-          TOKEN=$(curl -s -u admin:admin \
-            -X POST "http://localhost:9000/api/user_tokens/generate" \
-            -d "name=ci-token" | jq -r '.token')
-          echo "::add-mask::$TOKEN"
-          echo "SONAR_TOKEN=$TOKEN" >> "$GITHUB_ENV"
+      - name: Checkout code
+        uses: actions/checkout@v3
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-          distribution: temurin
+          distribution: 'temurin'
           java-version: 17
 
-      - name: Build & Sonar analyze
+      - name: Build product-service
+        run: mvn clean install -DskipTests
         working-directory: backend-service
-        env:
-          SONAR_HOST_URL: http://localhost:9000
-        run: |
-          mvn -B verify \
-            org.sonarsource.scanner.maven:sonar-maven-plugin:5.1.0.4751:sonar \
-            -Dsonar.projectKey=devopsl \
-            -Dsonar.host.url=$SONAR_HOST_URL
+
   test:
     runs-on: ubuntu-latest
     name: Test
@@ -71,14 +42,6 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: 17
-
-      - name: Format code
-        working-directory: backend-service
-        run: mvn net.revelc.code.formatter:formatter-maven-plugin:2.24.1:format
-
-      - name: Validate format
-        working-directory: backend-service
-        run: mvn formatter:validate
 
       - name: Test backend-service
         run: mvn test
