--- a/.github/workflows/front-service.yml
+++ b/.github/workflows/front-service.yml
@@ -43,7 +43,7 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-# checkoutasd
+# checkoutasd/////
     - run: npm ci
       working-directory: front-service
     - run: npm test
