--- a/front-service/package.json
+++ b/front-service/package.json
@@ -5,20 +5,25 @@
   "main": "app.js",
   "scripts": {
     "build": "webpack",
-    "test": "jest"
+    "test": "jest --coverage",
+    "sonar": "sonar-scanner"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "ejs": "^3.1.10",
-    "express": "^5.1.0",
-    "jest": "^29.7.0",
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
     "babel-loader": "^10.0.0",
+    "ejs": "^3.1.10",
     "ejs-loader": "^0.5.0",
+    "express": "^5.1.0",
+    "jest": "^29.7.0",
     "webpack": "^5.99.3",
     "webpack-cli": "^6.0.1"
+  },
+  "devDependencies": {
+    "jest-environment-jsdom": "^29.7.0",
+    "sonar-scanner": "^3.1.0"
   }
 }
