Update sonar properties
Signed-off-by: Vladislav <vladislav.tezev@gmail.com>

--- a/front-service/sonar-project.properties
+++ b/front-service/sonar-project.properties
@@ -1,5 +1,38 @@
 sonar.projectKey=front-service
 sonar.projectName=front-service
-sonar.host.url=http://sonarqube.sonarqube.svc.cluster.local:9000
-sonar.login=sqa_1a00f6dcf8935bcbe0d75fd060a73653e440caa9
-sonar.sources=src
+sonar.projectVersion=1.0
+
+sonar.sources=public/api/**
+sonar.tests=__tests__
+
+# Путь к отчёту покрытия (Jest, Istanbul и др. форматы lcov)
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+
+# Исключения из покрытия и анализа
+sonar.coverage.exclusions=\
+**/config/**,\
+**/dto/**,\
+**/model/**,\
+**/payload/**,\
+**/mapper/**,\
+**/exception/**,\
+**/*Application.js,\
+**/generated/**,\
+**/util/**,\
+**/exception/**,\
+**/advice/**,\
+**/resources/**,\
+**/migrations/**,\
+**/db/migration/**,\
+**/routes/**,\
+**/webpack.config.js,\
+**/app.js,\
+**/readBuilder.js
+
+# Исключения из анализа (если нужны, например node_modules)
+sonar.exclusions=\
+node_modules/**,\
+dist/**,\
+build/**,\
+__tests__/**,\
+coverage/**
