--- a/front-service/sonar-project.properties
+++ b/front-service/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=front-service
 sonar.projectName=front-service
 sonar.projectVersion=1.0
 
-sonar.sources=public/api/**
+sonar.sources=public/api
 sonar.tests=__tests__
 
 # Путь к отчёту покрытия (Jest, Istanbul и др. форматы lcov)
